# cs480Patel

./: README.md
PA0/include/: graphics_headers.h
PA01/: README.md
PA01/include/: graphics.h  object.h  window.h
PA01/src/: shader.cpp  window.cpp
PA02/: README.md
PA02/include/: camera.h  graphics.h  object.h
PA02/src/: window.cpp
PA03/: README.md
PA03/include/: graphics.h  menu.h  objLoader.h  object.h  window.h
PA03/src/: object.cpp  shader.cpp
PA04/: README.md
PA04/include/: camera.h  window.h
PA04/src/: camera.cpp  engine.cpp  main.cpp
PA05/include/: camera.h  engine.h  graphics_headers.h  object.h  shader.h
PA05/shaders/: vertShader.vert
PA05/src/: camera.cpp  graphics.cpp  main.cpp  window.cpp
PA06/: CMakeLists.txt  README.md
PA06/include/: camera.h
PA06/shaders/: fragShader.frag
PA06/src/: object.cpp
PA07/: README.md
PA07/include/: configLoader.hpp  object.h  shader.h  window.h
PA07/objFiles/earth/: earth.mtl
PA07/objFiles/neptune/: neptune.mtl
PA07/objFiles/sun/: sun_low_poly.mtl
PA07/objFiles/venus/: venus_low_poly.mtl
PA07/src/: camera.cpp  engine.cpp  object.cpp  window.cpp
PA08/: README.md
PA08/CMakeModules/: FindBullet.cmake
PA08/include/: configLoader.hpp  engine.h  graphics.h  graphics_headers.h
PA08/include/objects/: cube.h
PA08/launch/: DefaultConfig.txt
PA08/objFiles/board/: board.mtl
PA08/src/: configLoader.cpp  graphics.cpp
PA08/src/objects/: cube.cpp  cylinder.cpp  sphere.cpp
PA09/: CMakeLists.txt  README.md
PA09/include/: engine.h
PA09/include/objects/: cube.h
PA09/objFiles/: pinballparts.blend
PA09/objFiles/board/: board2.mtl  board2obj.mtl
PA09/objFiles/cube/: cube.mtl
PA09/shaders/vertexLighting/: vertex.vert
PA09/src/: engine.cpp
PA09/src/objects/: cylinder.cpp  object.cpp
PA1/: CMakeLists.txt  README.md
PA1/include/: engine.h  graphics.h  graphics_headers.h  shader.h
PA1/shaders/: fragShader.frag
PA1/src/: engine.cpp  graphics.cpp  main.cpp  object.cpp  shader.cpp
PA10/: CMakeLists.txt  README.md
PA10/include/: configLoader.hpp  engine.h  graphics.h  graphics_headers.h  menu.h  scoreboard.h
PA10/launch/: DefaultConfig.txt  Scoreboard.txt
PA10/src/: configLoader.cpp  engine.cpp  graphics.cpp  menu.cpp
PA11/: CMakeLists.txt  README.md
PA11/CMakeModules/: FindMagick.cmake
PA11/include/: board.h  camera.h  configLoader.hpp  engine.h  graphics.h  graphics_headers.h  menu.h  object.h  shader.h  window.h
PA11/include/imgui/: imgui.h
PA11/include/objects/: complex.h  cube.h  cylinder.h  object.h  paddle.h
PA11/launch/: DefaultConfig.txt  Scoreboard.txt
PA11/objFiles/: cube.mtl
PA11/objFiles/Les Cubes/: cubes.blend
PA11/objFiles/cubes/: cube.mtl  cubes.blend1
PA11/objFiles/cylinder_bumper/: cylinder_bumper.mtl
PA11/objFiles/plunger/: plunger.mtl
PA11/objFiles/rails/: rails.mtl
PA11/objFiles/table/: table.mtl
PA11/objFiles/triangle_bumper/: triangle_bumper.mtl
PA11/shaders/: fragmentDefault.frag  vertexDefault.vert
PA11/shaders/vertexLighting/: vertex.vert
PA11/src/: board.cpp  camera.cpp  configLoader.cpp  engine.cpp  graphics.cpp  main.cpp  menu.cpp  object.cpp  scoreboard.cpp  shader.cpp  window.cpp
PA11/src/objects/: complex.cpp  cube.cpp  cylinder.cpp  sphere.cpp
PA2/: README.md
PA2/include/: engine.h  menu.h  shader.h
PA2/shaders/: vertShader.vert
PA2/src/: ImguiMain.cpp  camera.cpp  engine.cpp  graphics.cpp  main.cpp  menu.cpp  object.cpp
PA3/: CMakeLists.txt  README.md
PA3/include/: graphics.h  menu.h  object.h  text.h
PA3/shaders/: fragShader.frag
PA3/src/: engine.cpp  graphics.cpp  main.cpp  menu.cpp  objLoader.cpp  object.cpp  text.cpp
PA4/: CMakeLists.txt  README.md
PA4/include/: engine.h  graphics.h  menu.h  objLoader.h  object.h
PA4/objFiles/: box.mtl
PA4/src/: engine.cpp  graphics.cpp  main.cpp  menu.cpp  objLoader.cpp  object.cpp  window.cpp
PA5/: CMakeLists.txt  README.md
PA5/include/: engine.h  graphics_headers.h  objLoader.h  object.h
PA5/shaders/: vertShader.vert
PA5/src/: engine.cpp  graphics.cpp  main.cpp  objLoader.cpp  object.cpp  shader.cpp
PA6/: README.md
PA6/include/: camera.h  engine.h  graphics.h  graphics_headers.h  menu.h  object.h  shader.h
PA6/shaders/: fragShader.frag
PA6/src/: camera.cpp  engine.cpp  graphics.cpp  main.cpp  menu.cpp  object.cpp  shader.cpp
PA7/: CMakeLists.txt  README.md  SolarSystem_Manual.docx
PA7/include/: camera.h  configLoader.hpp  engine.h  graphics.h  menu.h  object.h  window.h
PA7/launch/: DefaultConfig.txt
PA7/src/: camera.cpp  configLoader.cpp  engine.cpp  graphics.cpp  main.cpp  menu.cpp  object.cpp  shader.cpp  window.cpp
PA8/: CMakeLists.txt  README.md
PA8/include/: camera.h  configLoader.hpp  engine.h  graphics.h  menu.h  object.h  shader.h  window.h
PA8/include/objects/: board.h  cube.h  cylinder.h  object.h  sphere.h
PA8/launch/: DefaultConfig.txt
PA8/objFiles/jupiter/: jupiter.mtl
PA8/objFiles/mercury/: mercury.mtl
PA8/objFiles/saturn/: saturn_low_poly.mtl
PA8/objFiles/uranus/: uranus_low_poly.mtl
PA8/src/: camera.cpp  configLoader.cpp  engine.cpp  graphics.cpp  main.cpp  menu.cpp  object.cpp  shader.cpp
PA8/src/objects/: board.cpp  cube.cpp  object.cpp  sphere.cpp
PA9/: CMakeLists.txt  README.md
PA9/include/: configLoader.hpp  graphics.h  menu.h
PA9/launch/: DefaultConfig.txt
PA9/src/: configLoader.cpp  engine.cpp  graphics.cpp  menu.cpp  shader.cpp
(+52 files in other folders)
